cluster/apps/networking/gateway-api/app/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: gateway-system
  labels:
    istio-injection: disabled
    pod-security.kubernetes.io/enforce: privileged
    pod-security.kubernetes.io/warn: baseline
