cluster/apps/networking/gateway-api/app/network-policy.yaml
---
apiVersion: "cilium.io/v2"
kind: CiliumNetworkPolicy
metadata:
  name: "allow-cluster-to-gateway-api-webhook"
  namespace: gateway-system
spec:
  endpointSelector:
    matchLabels:
      name: gateway-api-admission-server
  ingress:
    - fromEntities:
        - cluster
      toPorts:
        - ports:
            - port: '9292'
              protocol: TCP
            - port: '8443'
              protocol: TCP
            - port: '443'
              protocol: TCP
